# intakectf-2021-public

./: README.md
Crypto/: docker-compose.yml
Crypto/aes_bit_flipping/: Dockerfile  challenge.json  solve.py
Crypto/e_is_3/: challenge.json  flag.txt  output.txt  solve.py  textbook_rsa.py
Crypto/electronic_code_book/: challenge.json
Crypto/lottery/: challenge.json
Crypto/my_first_worst_rsa_server/: challenge.json  solvemyfirstworstrsaserver.py
Crypto/small_d/: challenge.json  generatebige.py  output.txt
Crypto/xor_brute_force/: challenge.json  flag.txt  output.txt  secure_encryptor.py  solve.py
Crypto/zip_crypto/: challenge.json
Forensics/ExfiltrationPcap/: challenge.json  generate.py  hacker_exfiltration.pcapng  solve.py
Forensics/Finance/: challenge.json  fakecode.vba  finance document.docm  to build.txt  writeup.md
Forensics/KeyCap/: capture  challenge.json
Forensics/Missing_Bytes/: challenge.json
Forensics/Picture it/: .gitignore  Secrets.7z  challenge.json
Forensics/Recovery/: .gitignore  challenge.json  tutorial.txt
Forensics/User_Datagram_Pilfering/: challenge.json  challenge.pcap  generation_instructions
Forensics/ftplogin/: challenge.json  ftp.pcap
Forensics/pcap_png/: challenge.json
Forensics/setyb_cigaM/: challenge.json  setyb_cigaM
Miscellaneous/: .gitignore  docker-compose.yml
Pwn/: docker-compose.yml
Reversing/: docker-compose.yml
Reversing/baby_rusty_key/: Cargo.toml  build.sh  challenge.json
Reversing/baby_rusty_key/release/: baby_rusty_key
Reversing/baby_rusty_key/src/: main.rs
Web/: docker-compose.yml
(+387 files in other folders)
